--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.foellix</groupId>
 	<artifactId>AQLCheckOperator</artifactId>
-	<version>0.2.2</version>
+	<version>2.0.0</version>
 	<packaging>jar</packaging>
 
 	<name>AQL-CheckOperator</name>
@@ -10,38 +10,13 @@
 	<url>https://FoelliX.github.io/AQL-CheckOperator</url>
 
 	<properties>
-		<project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<timestamp>${maven.build.timestamp}</timestamp>
 		<maven.build.timestamp.format>ddMMyyyyHHmmssS</maven.build.timestamp.format>
 	</properties>
 
-	<profiles>
-		<profile>
-			<id>Windows</id>
-			<activation>
-				<os>
-					<family>Windows</family>
-				</os>
-			</activation>
-			<properties>
-				<script.extension>.bat</script.extension>
-			</properties>
-		</profile>
-		<profile>
-			<id>unix</id>
-			<activation>
-				<os>
-					<family>unix</family>
-				</os>
-			</activation>
-			<properties>
-				<script.extension>.sh</script.extension>
-			</properties>
-		</profile>
-	</profiles>
-
 	<build>
-		<defaultGoal>clean install exec:exec</defaultGoal>
+		<defaultGoal>clean install</defaultGoal>
 		<directory>target</directory>
 
 		<outputDirectory>target/classes</outputDirectory>
@@ -49,14 +24,6 @@
 		<testSourceDirectory>testsrc</testSourceDirectory>
 
 		<resources>
-			<resource>
-				<directory>${project.basedir}</directory>
-				<includes>
-					<include>tool.properties</include>
-				</includes>
-				<filtering>true</filtering>
-				<targetPath>${project.basedir}/target/build</targetPath>
-			</resource>
 			<resource>
 				<directory>${project.basedir}/data</directory>
 				<includes>
@@ -75,11 +42,11 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>17</source>
+					<target>17</target>
 				</configuration>
 			</plugin>
-			
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
@@ -98,9 +65,9 @@
 									</mainClass>
 								</manifest>
 							</archive>
-							<descriptorRefs>
-								<descriptorRef>jar-with-dependencies</descriptorRef>
-							</descriptorRefs>
+							<descriptors>
+								<descriptor>mvn/AQL-Assembly.xml</descriptor>
+							</descriptors>
 							<outputDirectory>${project.basedir}/target/build</outputDirectory>
 							<finalName>${project.name}-${project.version}</finalName>
 							<appendAssemblyId>false</appendAssemblyId>
@@ -114,25 +81,6 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.0</version>
 			</plugin>
-
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>exec-maven-plugin</artifactId>
-				<version>3.0.0</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>exec</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<executable>mvn/build${script.extension}</executable>
-					<arguments>
-						<argument>${project.name}-${project.version}.jar</argument>
-					</arguments>
-				</configuration>
-			</plugin>
 		</plugins>
 	</build>
 
@@ -141,7 +89,7 @@
 		<dependency>
 			<groupId>de.foellix</groupId>
 			<artifactId>AQL-System</artifactId>
-			<version>1.2.0</version>
+			<version>2.0.0</version>
 			<scope>compile</scope>
 		</dependency>
 
@@ -157,9 +105,9 @@
 	<developers>
 		<developer>
 			<name>Felix Pauck</name>
-			<email>fpauck@mail.uni-paderborn.de</email>
-			<organization>Paderborn University</organization>
-			<organizationUrl>https://cs.uni-paderborn.de</organizationUrl>
+			<email>my@FoelliX.de</email>
+			<organization>FoelliX.de</organization>
+			<organizationUrl>https://FoelliX.de</organizationUrl>
 		</developer>
 	</developers>
 
